<?xml version="1.0"?>
<package>
  <name>grp_local_planner</name>
  <version>0.0.0</version>
  <description>
  A local planner plugin to ROS navigation stack. It underlys Gaussian Random Path algorithm which defines 
  a probability distribution over continuous paths using Gaussian process regression.
  </description>

  <maintainer email="sungjoon.choi@cpslab.snu.ac.kr">Sungjoon Choi</maintainer>

  <license>TODO</license>


  <!-- <url type="website">http://wiki.ros.org/grp_local_planner</url> -->


  <author>Jihoon Lee</author>
  <author>Sungjoon Choi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>gaussian_process</build_depend>
  <export>
  </export>
</package>
